--- a/ProjectEulerSolutions/ProjectEulerSolutions.csproj
+++ b/ProjectEulerSolutions/ProjectEulerSolutions.csproj
@@ -182,26 +182,7 @@
     <Content Include="Content\themes\ui-lightness\jquery-ui-1.10.3.custom.min.css" />
     <Content Include="Global.asax" />
     <Content Include="Content\Site.css" />
-    <None Include="Scripts\jquery-1.8.2.intellisense.js" />
-    <None Include="Scripts\jquery.validate-vsdoc.js" />
     <Content Include="Index.html" />
-    <Content Include="Scripts\jquery-1.10.0.js" />
-    <Content Include="Scripts\jquery-1.10.0.min.js" />
-    <Content Include="Scripts\jquery-ui-1.10.3.custom.js" />
-    <Content Include="Scripts\jquery-ui-1.10.3.custom.min.js" />
-    <Content Include="Scripts\jquery.mobile-1.3.1.js" />
-    <Content Include="Scripts\jquery.mobile-1.3.1.min.js" />
-    <Content Include="Scripts\jquery.unobtrusive-ajax.js" />
-    <Content Include="Scripts\jquery.unobtrusive-ajax.min.js" />
-    <Content Include="Scripts\jquery.validate.js" />
-    <Content Include="Scripts\jquery.validate.min.js" />
-    <Content Include="Scripts\jquery.validate.unobtrusive.js" />
-    <Content Include="Scripts\jquery.validate.unobtrusive.min.js" />
-    <Content Include="Scripts\jsrender-1.0.js" />
-    <Content Include="Scripts\knockout-2.2.0.debug.js" />
-    <Content Include="Scripts\knockout-2.2.0.js" />
-    <Content Include="Scripts\modernizr-2.6.2.js" />
-    <Content Include="Scripts\_references.js" />
     <Content Include="Unity.Mvc4.README.txt" />
     <Content Include="Web.config" />
     <Content Include="Web.Debug.config">
@@ -220,6 +201,7 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+    <Folder Include="Scripts\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="packages.config" />
